Add unit tests for Monte Carlo output extraction and Phase 3 keyword integration
- Implemented comprehensive unit tests for the Monte Carlo output extraction functions in `test_monte_carlo_outputs.py`, covering scenarios such as complete data, missing data, and validation of carbon and harvest calculations.
- Added unit tests for new parameters in `FVSSimulationConfig` in `test_monte_carlo_phase3.py`, validating `mortality_multiplier`, `enable_calibration`, and `fvs_random_seed`.
- Enhanced keyword generation tests to ensure correct handling of new Monte Carlo parameters and their presence in generated keyword files.
- Updated `uv.lock` to include new dependencies: `et-xmlfile`, `openpyxl`, and `pymupdf`.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
     "source=/run/media,target=/run/media,type=bind,consistency=cached",
     "source=/run/data_raid5,target=/run/data_raid5,type=bind,consistency=cached"
   ],
-  "postCreateCommand": "uv sync --extra dev && Rscript -e \"renv::restore()\" && uv run python scripts/check_env.py && (Rscript scripts/check_r_env.R || echo 'R check had warnings - see above')",
+  "postCreateCommand": "uv sync --extra dev && uv run python scripts/check_env.py",
   "postStartCommand": "uv sync --extra dev --quiet",
   "customizations": {
     "vscode": {
@@ -41,12 +41,6 @@
           "editor.rulers": [
             88
           ]
-        },
-        // R settings
-        "r.bracketedPaste": true,
-        "r.plot.useHttpgd": true,
-        "[r]": {
-          "editor.defaultFormatter": "REditorSupport.r"
         }
       },
       "extensions": [
@@ -63,9 +57,7 @@
         "redhat.vscode-yaml",
         "tamasfe.even-better-toml",
         // Git
-        "eamodio.gitlens",
-        // R language support
-        "REditorSupport.r"
+        "eamodio.gitlens"
       ]
     }
   }
